--- a/rust_day03_exercise/Cargo.toml
+++ b/rust_day03_exercise/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = { version = "0.12.15", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.45.0", features = ["full"] }
+chrono = {version = "0.4.40", features = ["serde"] }
